--- a/index.html
+++ b/index.html
@@ -318,17 +318,35 @@
         Stock</span>
       <h2 class="text-4xl lg:text-6xl font-bold mb-6 font-display tracking-tight leading-tight">Jangan Biarkan
         Wajahmu<br>Kehilangan Cahayanya.</h2>
-      <p class="text-xl text-green-100 mb-10 max-w-2xl mx-auto font-light leading-relaxed">
+      <p class="text-xl text-green-100 mb-8 max-w-2xl mx-auto font-light leading-relaxed">
         Kembalikan kesegaran dan kepercayaan dirimu sekarang. Promo spesial menantimu.
       </p>
+
+      <!-- Timer -->
+      <div class="flex justify-center gap-4 mb-10 text-white font-mono">
+        <div class="flex flex-col items-center bg-white/10 backdrop-blur-sm rounded-lg p-3 w-20 border border-white/20">
+          <span id="hours" class="text-3xl font-bold">04</span>
+          <span class="text-xs uppercase tracking-wide opacity-80">Jam</span>
+        </div>
+        <div class="flex flex-col items-center bg-white/10 backdrop-blur-sm rounded-lg p-3 w-20 border border-white/20">
+          <span id="minutes" class="text-3xl font-bold">00</span>
+          <span class="text-xs uppercase tracking-wide opacity-80">Menit</span>
+        </div>
+        <div class="flex flex-col items-center bg-white/10 backdrop-blur-sm rounded-lg p-3 w-20 border border-white/20">
+          <span id="seconds" class="text-3xl font-bold">00</span>
+          <span class="text-xs uppercase tracking-wide opacity-80">Detik</span>
+        </div>
+      </div>
 
       <div class="flex flex-col items-center gap-6">
         <!-- Main WhatsApp Button -->
         <a href="https://wa.me/6287879895676?text=Halo%20Guminte,%20saya%20mau%20pesan%20Lemon%20Face%20Mist%20nya"
           target="_blank" rel="noreferrer"
           class="group relative inline-flex items-center justify-center gap-3 px-10 py-5 bg-white text-green-900 rounded-full font-bold text-lg overflow-hidden transition-all hover:scale-105 hover:shadow-2xl hover:shadow-green-900/50 ring-4 ring-green-800/30">
-          <svg class="w-6 h-6 fill-current text-green-600 transition-transform group-hover:rotate-12" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+          <svg class="w-6 h-6 fill-current text-green-600 transition-transform group-hover:rotate-12"
+            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z" />
           </svg>
           <span>Pesan via WhatsApp</span>
         </a>
@@ -403,6 +421,46 @@
           document.body.style.overflow = '';
         });
       });
+
+      // Countdown Timer Logic
+      const updateTimer = () => {
+        const hoursEl = document.getElementById('hours');
+        const minutesEl = document.getElementById('minutes');
+        const secondsEl = document.getElementById('seconds');
+
+        // Only run if timer elements are present in the DOM
+        if (!hoursEl || !minutesEl || !secondsEl) return;
+
+        const now = new Date();
+        const target = new Date(now);
+
+        // Reset every 4 hours for demo purposes
+        const currentHour = now.getHours();
+        const nextTargetHour = Math.ceil((currentHour + 1) / 4) * 4;
+
+        target.setHours(nextTargetHour);
+        target.setMinutes(0);
+        target.setSeconds(0);
+        target.setMilliseconds(0);
+
+        let diff = target - now;
+
+        // Handle case where we might have just passed the hour
+        if (diff <= 0) {
+          diff += 4 * 60 * 60 * 1000; // Add 4 hours
+        }
+
+        const hours = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+        const seconds = Math.floor((diff % (1000 * 60)) / 1000);
+
+        hoursEl.innerText = hours.toString().padStart(2, '0');
+        minutesEl.innerText = minutes.toString().padStart(2, '0');
+        secondsEl.innerText = seconds.toString().padStart(2, '0');
+      };
+
+      setInterval(updateTimer, 1000);
+      updateTimer(); // Initial call
     });
   </script>
 </body>
